--- a/Web.UI/src/app/components/exam/exams-grid/exams-grid.component.html
+++ b/Web.UI/src/app/components/exam/exams-grid/exams-grid.component.html
@@ -1,23 +1,21 @@
 <div class="container-fluid p-0">
-  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4 pt-3">
+  <div class="row g-4 p-2">
     @for (exam of exams; track exam.id) {
       <div class="col-auto">
         <div
-          class="card h-100 shadow-sm border-1 rounded-3 text-center"
+          class="card text-center"
           (click)="onExamClick(exam.id)"
           style="cursor: pointer; transition: transform 0.3s, box-shadow 0.3s;width: 18rem; border-color: rgba(177,201,203,0.87);"
           [ngClass]="{ 'hover-effect': true }"
         >
           <div class="card-body d-flex flex-column justify-content-between">
-            <h5 class="card-title text-primary fw-bold" style="color: #007bff;">
+            <h5 class="card-title text-dark w-bold">
               {{ exam.modelName }}
             </h5>
             @if (exam.duration) {
-              <h6 class="card-subtitle mt-2">
-                <span class="badge" style="background-color: #66b3ff; color: white; padding: 8px 16px;">
-                  Duration: {{ exam.duration | durationFormat }}
-                </span>
-              </h6>
+              <button class=" btn btn-outline-dark">
+                Duration: {{ exam.duration | durationFormat }}
+              </button>
             }
           </div>
         </div>
@@ -26,19 +24,9 @@
   </div>
 </div>
 
-<!-- Optional CSS for hover effect -->
 <style>
   .card:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-
-  .card-title {
-    color: #007bff;
-  }
-
-  .badge {
-    background-color: #66b3ff;
-    color: #0056b3;
+    transform: translateY(-1px);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.051);
   }
 </style>
