--- a/Web.UI/src/app/components/question/question-card/question-card.component.html
+++ b/Web.UI/src/app/components/question/question-card/question-card.component.html
@@ -1,27 +1,25 @@
 <div class="p-2 rounded"
-     style="background-color: #eef2fa; border-left: 5px solid #0d6efd; display: flex; align-items: center;">
+     style="background-color: #ffffff; border-left: 5px solid black; display: flex; align-items: center; box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);">
   @if (showDeleteBtn) {
-    <!-- Button before the question card -->
-    <button class="btn btn-outline-danger p-2 m-1 border-0" (click)="onDelete()">
+    <button class="btn btn-outline-danger p-1 m-2" (click)="onDelete()">
       <i class="bi bi-trash fs-5"></i>
     </button>
   }
-  <!-- Question card -->
-  <div class="form-check mb-2 p-3 rounded" style="background-color: white; border: 1px solid #d9e2f1; flex-grow: 1;">
-    <label class="form-check-label fw-semibold text-primary" for="question-{{ question.id }}" style="font-size: 1rem;">
-      {{ question.text }}
+  <div class="form-check mb-2 p-3 rounded"
+       style="background-color: #f9f9f9; border: 1px dashed darkgray; flex-grow: 1;">
+    <label class=" w-100 form-check-label fw-semibold text-dark" for="question-{{ question.id }}"
+           style="font-size: 1rem;">
+      <h4> {{ question.text }}</h4>
     </label>
-
     <ng-content></ng-content>
-    <!-- Answers Section -->
-    <div class="ms-4 mt-2 small">
+    <div class=" ms-4 mt-2 small">
       @for (ans of question.answers; track ans.id) {
-        <div class="d-flex align-items-center my-2">
+        <div class="d-flex bg-white bg-opacity-100 p-2 border border-opacity-25 rounded-2 align-items-center my-2">
           <i class="bi"
              [ngClass]="iconClassList(ans)"
-             style="font-size: 0.9rem; margin-right: 5px;"
+             style="font-size: 0.9rem; margin-right: 5px; color: black;"
           ></i>
-          <span>{{ ans.text }}</span>
+          <h6>{{ ans.text }}</h6>
         </div>
       }
     </div>
