--- a/Web.UI/src/app/components/shared/drawer/drawer.component.html
+++ b/Web.UI/src/app/components/shared/drawer/drawer.component.html
@@ -1,13 +1,16 @@
 <div class="drawer d-inline-flex bg-light vh-100">
-  <div class="d-flex flex-column align-items-start py-3" style="padding-right: 2rem">
-    <ul class="nav flex-column ">
-      @for (action of drawerActions; track action.title) {
-        <li class="nav-item mb-3" [attr.data-bs-placement]="'right'" [attr.data-bs-toggle]="'tooltip'"
+  <div class="d-flex mt-4 flex-column align-items-stretch p-2" style="padding-right: 2rem">
+    <ul class="nav flex-column w-100">
+      @for (action of actions; track action.Id) {
+        <li class="nav-item w-100 mb-4 p-2 rounded-2" [class]="(selectedTab == action.Id) ? 'bg-dark-subtle' : ''"
+            [routerLink]="action.path"
+            (click)="setSelectedTab(action.Id)"
+            [attr.data-bs-placement]="'right'" [attr.data-bs-toggle]="'tooltip'"
             [attr.title]="action.title">
-          <a class="nav-link text-secondary d-flex align-items-center" [routerLink]="action.path">
-            <i [class]="action.icon"></i>
-            <!-- Hide the text on small screens -->
-            <span class="d-none d-md-inline ms-2">{{ action.title }}</span>
+
+          <a class="nav-link text-secondary d-flex align-items-center">
+            <i class="text-dark-emphasis" [class]="action.icon"></i>
+            <span class="d-none d-md-inline ms-2 text-dark-emphasis">{{ action.title }}</span>
           </a>
         </li>
       }
