--- a/Web.UI/src/app/pages/admin/admin-exam-results-page/admin-exam-results-page.component.html
+++ b/Web.UI/src/app/pages/admin/admin-exam-results-page/admin-exam-results-page.component.html
@@ -2,7 +2,7 @@
   <app-loading-spinner></app-loading-spinner>
 } @else {
   <div class="card p-4 m-2 border border-1 rounded-4 justify-content-between overflow-auto" style="min-height: 90%">
-    <app-exam-results-table [examResults]="examResults"></app-exam-results-table>
+    <app-exam-results-table (orderChange)="changeOrder($event)" [examResults]="examResults"></app-exam-results-table>
     <div class="container-fluid mt-4 align-items-center ">
       <div class="d-inline-block mx-2">
         <label for="pageSize" class="form-label text-muted">Items per page</label>
