--- a/Web.UI/src/app/components/shared/drawer/drawer.component.html
+++ b/Web.UI/src/app/components/shared/drawer/drawer.component.html
@@ -1,21 +1,18 @@
 <div class="drawer d-inline-flex bg-light vh-100">
   <div class="d-flex mt-4 flex-column align-items-stretch p-2" style="padding-right: 2rem">
-    <ul class="nav flex-column w-100">
-      @for (action of actions; track action.Id) {
-        <li class="nav-item w-100 mb-4 p-2 rounded-2" [class]="(selectedTab == action.Id) ? 'bg-dark-subtle' : ''"
-            [routerLink]="action.path"
-            (click)="setSelectedTab(action.Id)"
-            [attr.data-bs-placement]="'right'" [attr.data-bs-toggle]="'tooltip'"
-            [attr.title]="action.title">
-
-          <a class="nav-link text-secondary d-flex align-items-center">
-            <i class="text-dark-emphasis" [class]="action.icon"></i>
-            <span class="d-none d-md-inline ms-2 text-dark-emphasis">{{ action.title }}</span>
-          </a>
-        </li>
-      }
-    </ul>
-
+    @for (action of actions; track action.Id) {
+      <button class="btn w-100 my-2 p-2 rounded-2 w-100"
+              [class]="(selectedTab === action.Id) ? 'bg-dark-subtle' : ''"
+              [routerLink]="action.path"
+              (click)="setSelectedTab(action.Id)"
+              [attr.data-bs-placement]="'right'" [attr.data-bs-toggle]="'tooltip'"
+              [attr.title]="action.title">
+        <a class="nav-link text-secondary d-flex align-items-center">
+          <i class="text-dark-emphasis" [class]="action.icon"></i>
+          <span class="d-none d-md-inline ms-2 text-dark-emphasis">{{ action.title }}</span>
+        </a>
+      </button>
+    }
     <button class="btn btn-outline-secondary mt-auto ms-3 mb-4" (click)="logOut()">Logout</button>
   </div>
 </div>
